Added java-opts to build.clj